--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -46,8 +46,10 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.8.1",
     "@superfluid-finance/ethereum-contracts": "^1.5.2",
+    "@superfluid-finance/sdk-core": "^0.6.3",
     "dotenv": "^16.0.3",
     "envfile": "^6.18.0",
+    "graphql": "^16.6.0",
     "qrcode": "^1.5.1"
   }
 }
